objects/NVMContactWorld__IncomingCallPoppingSettings__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__AdditionalFields__c</fullName>
        <description>Name of additional field to show in the Log a Call Action.</description>
        <label>Additional Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__HandlerClassName__c</fullName>
        <description>The Apex class name for the handler that implements the custom popping behaviour.</description>
        <label>Custom Behaviour Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__SearchClassName__c</fullName>
        <description>The Apex class name for the handler that implements the custom search algorithm.</description>
        <label>Search Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__SelectPresentedClidClassName__c</fullName>
        <description>Used to specify the name of the Apex Class that implements the Presented CLID query.</description>
        <label>Auto Presented CLID Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ShowNotesPanel__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables or disables the notes panel in the incoming call page.</description>
        <label>Show Notes Panel</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>